--- a/prototypes/sales-desktop/src/styles/SageFloat.module.css
+++ b/prototypes/sales-desktop/src/styles/SageFloat.module.css
@@ -48,8 +48,8 @@
 /* Floating mic shortcut */
 .micFab {
   position: fixed;
-  bottom: 88px;
-  right: 28px;
+  bottom: 148px;
+  right: 32px;
   z-index: 999;
   width: 36px;
   height: 36px;
